src/components/sections/forest/forestSection.scss
@import "@/styles/_globals.scss";
.forest {
  background-color: $pale-blue;

  &__card {
    @include font-delta;
    display: block;
    position: relative;
    z-index: 20;
    color: $black;
    background-color: $transparent-white;
    margin: $spacing-unit-x12 0 $spacing-unit-x16 0;
    padding: $spacing-unit;
    width: auto;
  }

  &__card_inside {
    display: block;
    position: relative;
    background-color: $white;
    padding: $spacing-unit $spacing-unit 0 $spacing-unit;
    margin-bottom: $spacing-unit-x2;

    &:last-child {
      margin-bottom: none;
    }

    & img {
      width: 100%;
    }
  }

  &__title {
    position: absolute;
    z-index: 30;
    color: $midnight-blue;
    display: block;
    width: 100%;
    flex: 0 0 100%;
    text-align: center;
    margin: $spacing-unit-x3 0 $spacing-unit-x3 0;
  }

  &__hills {
    position: absolute;
    display: block;
    bottom: -2vw;
    width: 100%;

    &--1 {
      z-index: 11;
    }
    &--2 {
      z-index: 5;
    }
  }

  &__trees {
    position: absolute;
    bottom: 1vw;
    z-index: 4;
    width: 100%;
  }

  &__moon {
    z-index: 1;
    position: absolute;
    top: -4%;
    left: 6%;
    width: 20%;
  }
  &__moon_back {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    width: 100%;
  }
}

@media (min-width: $breakpoint-sm) {
  .forest {
    background-color: transparent;

    &__title {
      position: relative;
      margin: $spacing-unit-x5 0 $spacing-unit-x2 0;
    }

    &__card {
      position: relative;
      background: transparent;
      opacity: 0;
      margin: 0;

      &--hide {
        opacity: 0;
        transition: opacity linear 200ms;
      }
      &--show {
        opacity: 1;
        transition: opacity linear 600ms;
      }
    }

    &__card_inside {
      position: absolute;
      top: 0;
      opacity: 0;
      background: transparent;
      display: table;
      margin: 0 auto;
      width: 100%;
      text-align: center;

      & img {
        border: $transparent-white solid $spacing-unit;
        height: 70vh;
        width: auto;
      }

      &--show {
        opacity: 1;
        transition: opacity linear 500ms;
      }
      &--hide {
        opacity: 0;
        transition: opacity linear 500ms;
      }
    }

    &__moon_back {
      opacity: 0;

      &--hide {
        opacity: 0;
        transition: opacity linear 300ms;
      }
      &--show {
        opacity: 1;
        transition: opacity linear 300ms;
      }
    }
  }


}

